App/lib/decision/decision.h

#ifndef DECISION_H
#define DECISION_H

#ifdef __cplusplus
extern "C" {
#endif

#include <stdint.h>

#include "trajectory.h"

/* Both from the task: at most four pieces, at most five edges each. */
#define DECISION_MAX_PIECES       4U
#define DECISION_MAX_VERTICES     5U
#define DECISION_CARD_MAX_EDGE_EVENTS_PER_PIECE 24U
#define DECISION_CARD_MAX_PRIMITIVES_PER_PIECE  16U
/* Node ceiling for the layout search. A set of four pieces that really tiles is
   answered in a few hundred to a few tens of thousands of nodes, because the
   search stops at the first layout the task cannot distinguish from perfect; the
   budget is sized for the other case, where no arrangement is good enough and the
   tree has to be exhausted before saying so. Measured dissections need up to
   ~110k nodes for that, so this leaves room to spare and still bounds the solve
   well inside the task's two minutes. */
#define DECISION_DEFAULT_MAX_NODES 400000U

/* The task scores an assembly on one geometric criterion: adjacent pieces'
   corresponding vertices within 2 cm. Every threshold below is therefore a
   search aid, not a correctness requirement, and each one only has to be tight
   enough to keep the search from wandering. Sized against hand-cut pieces,
   whose edges routinely disagree by several millimetres, because a threshold
   that rejects the true layout turns into NO_SOLUTION rather than a lower
   score. */

/* Length disagreement allowed between two edges being joined. Hand-cut mating
   edges differ by millimetres, and the resulting vertex offset stays far inside
   the 2 cm the task allows, so this is deliberately far looser than the cut
   accuracy it tolerates. */
#define DECISION_EDGE_TOLERANCE_MM      8.0f
/* How far a piece's outermost edge may sit from the bounding rectangle and
   still count as lying on it. One degree of cutting error across a 100 mm edge
   is already ~1.7 mm, and the edge itself may be short of the corner. */
#define DECISION_BOUNDARY_TOLERANCE_MM  8.0f
/* Fraction of the bounding rectangle the assembly may fail to tile: the area
   left uncovered plus the area covered twice, both counted as error. It has to
   absorb the sum of all inter-piece seams rather than any single one, so it is
   set against measured dissections rather than derived - four hand-cut pieces
   with 3 mm of error per cut leave gaps worth about 9% of the rectangle, and a
   set of pieces that cannot tile any rectangle in the allowed size range comes
   out at 20% or worse. */
#define DECISION_MAX_FILL_ERROR_RATIO   0.12f
/* How deep one piece may reach into another before the pair counts as
   overlapping. Joining two edges of unequal length aligns their midpoints, so
   the longer piece necessarily pokes into its neighbour by up to half the
   difference: with DECISION_EDGE_TOLERANCE_MM at 8 mm that is 4 mm of
   unavoidable nibble. Judging overlap by depth rather than by any incursion at
   all is what lets the loose edge tolerance actually be used; a piece genuinely
   lying on top of another still reaches far deeper than this. */
#define DECISION_OVERLAP_TOLERANCE_MM   \
    (0.5f * DECISION_EDGE_TOLERANCE_MM + 1.0f)
/* Layout score at which the search stops instead of looking for a better one.
   The task scores geometry on one criterion, adjacent pieces' corresponding
   vertices within 2 cm, so a layout this close to a perfect tiling already earns
   full marks and further search cannot gain anything - it only spends time the
   two-minute limit does not have. The score is the fraction of the rectangle left
   untiled plus the corner mismatch measured against the rectangle's size, so 2%
   of a 100 mm rectangle is about 2 mm, an order of magnitude inside what the task
   allows. Exact dissections reach 0 and stop at the first complete layout. */
#define DECISION_GOOD_ENOUGH_SCORE      0.02f
/* Move every solved placement point this far away from the target rectangle
   centre. The layout search still evaluates the true edge-to-edge assembly;
   this final command offset leaves room for stepper and wrist positioning error
   without changing the selected seams or the required piece rotation. */
#define DECISION_ASSEMBLY_CLEARANCE_MM  2.0f
/* Shortest run of shared seam that counts as two pieces being joined. Edges of
   unequal length are allowed to meet, because a cut that stops partway across
   the rectangle leaves one long edge facing two shorter ones, but they still
   have to touch along a real length rather than at a corner. The task requires
   every edge to be at least 2 cm, so this only rules out corner contacts. */
#define DECISION_MIN_EDGE_OVERLAP_MM    15.0f

/* The sheet's midline along its long edge, in the shared A4 frame: landscape
   sheet, origin at the top-left corner, +X right along the long edge, +Y down the
   short edge. Both ends of the link use that frame, so which half is which is
   fixed rather than inferred: the pieces are picked from the left half
   (x < 148.5) and assembled in the right half (x > 148.5). */
#define DECISION_PAPER_DIVIDER_X_MM     148.5f

/* Target rectangle envelope, 9x5 cm to 12x9 cm in the task, widened by the
   cutting error that accumulates along each side. The task guarantees the true
   rectangle is inside the stated range; what is measured is not, so clamping to
   the exact range would reject a valid assembly whose edges came out a few
   millimetres long.
 *
 * The two margins differ because the error is one-sided. Assembling hand-cut
 * pieces leaves gaps at the seams and never negative ones, so a measured side
 * lands at or above the true side; the generous allowance belongs on the upper
 * bound. Slack on the lower bound only buys tolerance for vision undermeasuring
 * the outline, and every millimetre of it also admits arrangements that are not
 * the target rectangle at all but a smaller one the pieces happen to cover. */
#define DECISION_SIDE_UNDER_MARGIN_MM   4.0f
#define DECISION_SIDE_OVER_MARGIN_MM    12.0f
#define DECISION_MIN_SHORT_SIDE_MM      (50.0f - DECISION_SIDE_UNDER_MARGIN_MM)
#define DECISION_MAX_SHORT_SIDE_MM      (90.0f + DECISION_SIDE_OVER_MARGIN_MM)
#define DECISION_MIN_LONG_SIDE_MM       (90.0f - DECISION_SIDE_UNDER_MARGIN_MM)
#define DECISION_MAX_LONG_SIDE_MM       (120.0f + DECISION_SIDE_OVER_MARGIN_MM)

typedef struct {
    float x_mm;
    float y_mm;
} DecisionPoint;

typedef struct {
    uint8_t id;
    uint8_t vertex_count;
    DecisionPoint center;
    DecisionPoint vertices[DECISION_MAX_VERTICES];
} DecisionPiece;

/* The vision protocol is decoded into this structure before DecisionTask. */
typedef struct {
    uint32_t seq;
    uint8_t piece_count;
    DecisionPiece pieces[DECISION_MAX_PIECES];
} DecisionVisionFrame;

typedef enum {
    DECISION_CARD_COLOR_RED = 1,
    DECISION_CARD_COLOR_BLACK = 2
} DecisionCardColor;

typedef enum {
    DECISION_CARD_PRIMITIVE_UNKNOWN = 0,
    DECISION_CARD_PRIMITIVE_DOT,
    DECISION_CARD_PRIMITIVE_LINE,
    DECISION_CARD_PRIMITIVE_GLYPH
} DecisionCardPrimitiveKind;

/* A red or black stroke observed on a line just inside one polygon edge. */
typedef struct {
    uint8_t edge_index;
    uint8_t position_q8;
    uint8_t color;
    int8_t tangent_deg;
    /* Stroke width in quarter-millimetres. */
    uint8_t width_q4_mm;
    uint8_t confidence;
} DecisionCardEdgeEvent;

/* A sparse interior pattern component in the same A4 coordinate frame as the
   measured polygon. It is transformed together with its owning piece. */
typedef struct {
    DecisionPoint center;
    float area_mm2;
    uint8_t color;
    uint8_t kind;
    int8_t angle_deg;
    uint8_t confidence;
} DecisionCardPrimitive;

typedef struct {
    uint8_t piece_id;
    uint8_t edge_event_count;
    DecisionCardEdgeEvent
        edge_events[DECISION_CARD_MAX_EDGE_EVENTS_PER_PIECE];
    uint8_t primitive_count;
    DecisionCardPrimitive
        primitives[DECISION_CARD_MAX_PRIMITIVES_PER_PIECE];
} DecisionCardPieceFeatures;

typedef struct {
    uint32_t layout_id;
    DecisionVisionFrame vision;
    uint8_t piece_count;
    DecisionCardPieceFeatures pieces[DECISION_MAX_PIECES];
} DecisionCardFrame;

typedef struct {
    DecisionPoint target_center;
    /* X of the line splitting the sheet into the pick half (x below it) and the
       place half (x above it). The assembly is held in the place half and the
       pieces are required to come from the pick half. Set to zero to place the
       rectangle at target_center unconditionally and skip that check; see
       DECISION_PAPER_DIVIDER_X_MM. */
    float paper_divider_x_mm;
    float pick_z_mm;
    /* Cruise height used above the pick and the place location. */
    float transit_z_mm;
    float place_z_mm;
    float edge_length_tolerance_mm;
    float boundary_tolerance_mm;
    float max_fill_error_ratio;
    float min_short_side_mm;
    float max_short_side_mm;
    float min_long_side_mm;
    float max_long_side_mm;
    uint32_t max_search_nodes;
} DecisionConfig;

/* Both lift poses sit at transit_z_mm, directly above pick and place. */
typedef struct {
    uint8_t piece_id;
    TrajectoryPose pick;
    TrajectoryPose pick_above;
    TrajectoryPose place_above;
    TrajectoryPose place;
} DecisionMove;

typedef struct {
    uint32_t seq;
    uint32_t search_nodes;
    uint8_t move_count;
    DecisionMove moves[DECISION_MAX_PIECES];
} DecisionPlan;

typedef enum {
    DECISION_STRATEGY_GEOMETRIC = 0,
    DECISION_STRATEGY_CARD_PATTERN
} DecisionStrategy;

typedef enum {
    DECISION_RESULT_OK = 0,
    DECISION_RESULT_INVALID_ARGUMENT,
    DECISION_RESULT_INVALID_FRAME,
    DECISION_RESULT_NO_SOLUTION,
    DECISION_RESULT_SEARCH_LIMIT,
    DECISION_RESULT_NUMERIC_ERROR,
    /* A piece was measured outside the pick half, so either the pieces were laid
       out in the wrong half of the sheet or the camera is not on the frame this
       code expects. Both need a human, which is why it is not worked around. */
    DECISION_RESULT_WRONG_HALF,
    /* Geometry produced one or more rectangles, but no card feature provided
       evidence that distinguishes their relative pattern arrangement. */
    DECISION_RESULT_CARD_AMBIGUOUS
} DecisionResult;

void Decision_GetDefaultConfig(DecisionConfig *config);

/* Every scored task assembles pieces the device has not seen before, so the
   solve is always the edge-matching search. */
DecisionResult Decision_Solve(const DecisionVisionFrame *frame,
                              const DecisionConfig *config,
                              DecisionPlan *plan);

DecisionResult Decision_SolveGeneral(const DecisionVisionFrame *frame,
                                     const DecisionConfig *config,
                                     DecisionPlan *plan);

/* Ranks geometry-valid layouts using cut-edge and interior playing-card
   features. A layout may stop the search early only when every reliable edge
   event is paired; otherwise the bounded geometry search remains exhaustive. */
DecisionResult Decision_SolveCard(const DecisionCardFrame *frame,
                                  const DecisionConfig *config,
                                  DecisionPlan *plan);

DecisionResult Decision_SolveStrategy(DecisionStrategy strategy,
                                      const DecisionVisionFrame *vision,
                                      const DecisionCardFrame *card,
                                      const DecisionConfig *config,
                                      DecisionPlan *plan);

/* Builds raised travel paths ending at pick_above and place_above. The decision
   task performs the two vertical servo strokes explicitly after both stepper
   axes report physical arrival. */
uint8_t Decision_BuildTrajectoryRequest(const DecisionMove *move,
                                        const TrajectoryPose *current,
                                        const TrajectoryLimits *limits,
                                        TrajectoryRequest *request);

#ifdef __cplusplus
}
#endif

#endif